chore: fix overflow style bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,7 +64,6 @@
   }
   body {
     @apply bg-background text-foreground;
-    overflow: hidden; /* Prevent scrolling */
   }
 }
 
